src/components/Contentbox/Contentbox.css
.contentbox {
  width: 100%;
  position: relative;
  padding: 50px;
}
.contentbox .mainbox {
  position: relative;
  width: 100%;
  background-color: #ecf7ff;
  border-radius: 50px;
  height: -moz-fit-content;
  height: fit-content;
  overflow: hidden;
  padding: 30px;
  display: flex;
  flex-direction: row;
  gap: 3.33%;
  justify-content: space-between;
}
.contentbox .mainbox .sliderbox {
  width: 80px;
  min-height: 100%;
  background-color: rgb(255, 255, 255);
  border-radius: 50px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  align-items: center;
}
.contentbox .mainbox .sliderbox img {
  height: 30px;
  width: 30px;
}
.contentbox .mainbox .sliderbox img:hover {
  cursor: pointer;
  scale: 1.1;
  padding: 3px;
  border-radius: 20px;
  border: 3px solid #00288a;
}
.contentbox .mainbox .textbox {
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 20px 0px;
}
.contentbox .mainbox .textbox textarea {
  width: 100%;
  height: 100px;
  border: 0;
  outline: 0;
  background-color: inherit;
  font-size: 1rem;
  color: #00288a;
}
.contentbox .mainbox .textbox textarea::-moz-placeholder {
  font-size: 3rem;
  color: #00288a;
  margin: 10px 0;
}
.contentbox .mainbox .textbox textarea::placeholder {
  font-size: 3rem;
  color: #00288a;
  margin: 10px 0;
}
.contentbox .mainbox .displaybox {
  padding: 40px 20px;
  width: 500px;
  background-color: #00288a;
  border-radius: 30px;
  border: 0px;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.contentbox .mainbox .displaybox .qrbox {
  margin: 20px;
}
.contentbox .mainbox .displaybox .qrbox img {
  height: 200px;
  width: 200px;
}
.contentbox .mainbox .displaybox .qrsettings {
  width: 80%;
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.contentbox .mainbox .displaybox .qrsettings p {
  font-size: 0.9rem;
  color: white;
  margin: 5px 10px;
}
.contentbox .mainbox .displaybox .qrsettings h1 {
  font-size: 1.4rem;
  color: #ecf7ff;
}
.contentbox .mainbox .displaybox .qrsettings input {
  width: 100%;
  height: 40px;
  border-radius: 10px;
  border: 0;
  outline: 0;
  padding: 10px;
  font-size: 1.1rem;
  color: white;
  background-color: #113a9f;
}
.contentbox .mainbox .displaybox .qrsettings input::-moz-placeholder {
  color: white;
  font-size: 1rem;
}
.contentbox .mainbox .displaybox .qrsettings input::placeholder {
  color: white;
  font-size: 1rem;
}
.contentbox .mainbox .displaybox .qrbuttons {
  width: 100%;
  height: 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  gap: 20px;
  margin-top: 20px;
}
.contentbox .mainbox .displaybox .qrbuttons button {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 120px;
  height: 100%;
  border-radius: 20px;
  border: 0px;
  background-color: #113a9f;
  color: white;
  font-size: 1.2rem;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}
.contentbox .mainbox .displaybox .qrbuttons button:hover {
  cursor: pointer;
  scale: 1.1;
  border-radius: 20px;
}
.contentbox .mainbox .displaybox .qrbuttons button:nth-child(2n) {
  background-color: orange;
}
.contentbox .mainbox .displaybox .qrbuttons button img {
  height: 25px;
  width: 25px;
}

@media screen and (max-width: 950px) {
  .contentbox .mainbox {
    flex-direction: column;
  }
  .contentbox .mainbox .sliderbox {
    width: 100%;
    height: 80px;
    flex-direction: row;
    gap: 20px;
  }
  .contentbox .mainbox .sliderbox img {
    height: 25px;
    width: 25px;
  }
  .contentbox .mainbox .textbox {
    width: 100%;
    height: 70%;
  }
  .contentbox .mainbox .displaybox {
    width: 100%;
  }
}
@media screen and (max-width: 700px) {
  .contentbox {
    padding: 20px 10px;
  }
  .contentbox .mainbox {
    padding: 20px 10px;
  }
  .contentbox .mainbox .sliderbox {
    width: 100%;
    height: 60px;
    flex-direction: row;
    gap: 10px;
  }
  .contentbox .mainbox .sliderbox img {
    height: 20px;
    width: 20px;
  }
  .contentbox .mainbox .textbox {
    width: 100%;
    height: 300px;
  }
  .contentbox .mainbox .textbox textarea::-moz-placeholder {
    font-size: 2rem;
    color: #00288a;
    margin: 10px 0;
  }
  .contentbox .mainbox .textbox textarea::placeholder {
    font-size: 2rem;
    color: #00288a;
    margin: 10px 0;
  }
  .contentbox .mainbox .textbox h1 {
    font-size: 1.5rem;
  }
  .contentbox .mainbox .displaybox {
    width: 100%;
    padding: 20px 0px;
  }
}/*# sourceMappingURL=Contentbox.css.map */

